--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2837,7 +2837,9 @@ Multimedia API</a>. </big>
       8.2 – Ordinary sprite subsystem improved.<br>
       8.2.1 – Background subsystem improved.<br>
       8.2.2 – Render performance increased.<br>
-      8.2.3 – 8.2.5 – Small changes.<br>
+      8.2.3 – 8.2.8 – Small changes.<br>
+      8.2.9 – Render performance increased.<br>
+      8.3 – Small bug fixed.<br>
     </big>
     <p></p>
   </body>
