--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -401,7 +401,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
-
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -2736,7 +2735,8 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
-      6.6.2 – Simple sound subsystem back-ported from Neon game development kit 5.7.8.<br>
+      6.6.2 – Simple sound subsystem back-ported from Neon game development kit
+      5.7.8.<br>
       6.6.3 – Small bug in multimedia subsystem fixed.<br>
       6.6.4 – 6.6.6 – Small changes.<br>
       6.6.7 – Multimedia subsystem improved.<br>
@@ -2852,7 +2852,9 @@ Multimedia API</a>. </big>
       8.3.1 – Small changes.<br>
       8.3.2 – Render performance increased.<br>
     </big><big> 8.3.3 – Animation subsystem improved.</big><br>
-      8.3.4 – Background subsystem improved.<br>
+    <big> 8.3.4 – Background subsystem improved.<br>
+    </big><big> 8.3.5 – Source code synced with Neon game development kit 7.2.9.<br>
+    </big><big> 8.3.6 – Small changes.</big><br>
     <p></p>
   </body>
 </html>
