--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -712,7 +712,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         &amp;background);</span> – Load a background </big><big>from the buffer</big><big>.<br>
       <br>
     </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
-
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load a background from target file.</big><br>
     <big><br>
@@ -1374,7 +1373,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </big></h2>
     <big><span style="text-decoration: underline;"></span> Isometric level
       subsystem intend for help you to create an isometric levels. Just use <span
-
         style="font-style: italic;">World</span> class for doing it. Let's look
       at public methods.<br>
       <br>
@@ -2735,8 +2733,7 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
-      6.6.2 – Simple sound subsystem back-ported from Neon game development kit
-      5.7.8.<br>
+      6.6.2 – Simple sound subsystem back-ported from Neon game development kit 5.7.8.<br>
       6.6.3 – Small bug in multimedia subsystem fixed.<br>
       6.6.4 – 6.6.6 – Small changes.<br>
       6.6.7 – Multimedia subsystem improved.<br>
@@ -2854,7 +2851,9 @@ Multimedia API</a>. </big>
     </big><big> 8.3.3 – Animation subsystem improved.</big><br>
     <big> 8.3.4 – Background subsystem improved.<br>
     </big><big> 8.3.5 – Source code synced with Neon game development kit 7.2.9.<br>
-    </big><big> 8.3.6 – Small changes.</big><br>
+    </big><big> 8.3.6 – Small changes.<br>
+      8.3.7 – Source code synced with Neon game development kit 7.3.<br>
+    </big>
     <p></p>
   </body>
 </html>
