Source code synced with Neon game development kit 7.3.1

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2853,6 +2853,7 @@ Multimedia API</a>. </big>
     </big><big> 8.3.5 – Source code synced with Neon game development kit 7.2.9.<br>
     </big><big> 8.3.6 – Small changes.<br>
       8.3.7 – Source code synced with Neon game development kit 7.3.<br>
+      8.3.8 – Source code synced with Neon game development kit 7.3.1.<br>
     </big>
     <p></p>
   </body>
