Source code synced with Neon game development kit 7.3.2

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2854,6 +2854,7 @@ Multimedia API</a>. </big>
     </big><big> 8.3.6 – Small changes.<br>
       8.3.7 – Source code synced with Neon game development kit 7.3.<br>
       8.3.8 – Source code synced with Neon game development kit 7.3.1.<br>
+      8.3.9 – Source code synced with Neon game development kit 7.3.2.<br>
     </big>
     <p></p>
   </body>
