--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2855,6 +2855,7 @@ Multimedia API</a>. </big>
       8.3.7 – Source code synced with Neon game development kit 7.3.<br>
       8.3.8 – Source code synced with Neon game development kit 7.3.1.<br>
       8.3.9 – Source code synced with Neon game development kit 7.3.2.<br>
+      8.4 – Source code synced with Neon game development kit 7.3.3.<br>
     </big>
     <p></p>
   </body>
