--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2856,6 +2856,7 @@ Multimedia API</a>. </big>
       8.3.8 – Source code synced with Neon game development kit 7.3.1.<br>
       8.3.9 – Source code synced with Neon game development kit 7.3.2.<br>
       8.4 – Source code synced with Neon game development kit 7.3.3.<br>
+      8.4.1 – Small changes.<br>
     </big>
     <p></p>
   </body>
